<resources>
    <string name="app_name">HSV Color Picker</string>
    <string name="author">Alice Lee</string>
    <string name="action_about">About</string>
    <string name="colorSwatch"></string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value/Lightness</string>
    <string name="blackButton" />
    <string name="redButton" />
    <string name="limeButton" />
    <string name="blueButton" />
    <string name="yellowButton" />
    <string name="cyanButton" />
    <string name="magentaButton" />
    <string name="silverButton" />
    <string name="greyButton" />
    <string name="maroonButton" />
    <string name="oliveButton" />
    <string name="greenButton" />
    <string name="navyButton" />
    <string name="tealButton" />
    <string name="purpleButton" />
</resources>
